# huxley

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  justfile  zensical.toml
.zed/: settings.json
crates/huxley-api/: Cargo.toml
crates/huxley-api/src/: error.rs  lib.rs  router.rs
crates/huxley-api/src/dtos/: app_setting.rs  credential.rs  folder.rs  mod.rs  organization.rs  project.rs  tag.rs  variable.rs
crates/huxley-api/src/routes/: auth.rs  mod.rs  tags.rs
crates/huxley-app/: Cargo.toml
crates/huxley-app/src/: cli.rs  main.rs
crates/huxley-config/: Cargo.toml
crates/huxley-config/src/: error.rs  lib.rs
crates/huxley-core/: Cargo.toml
crates/huxley-core/src/: error.rs  lib.rs
crates/huxley-engine/: Cargo.toml
crates/huxley-engine/src/: error.rs  lib.rs
crates/huxley-state/: Cargo.toml
crates/huxley-state/src/: lib.rs
crates/huxley-store/: Cargo.toml
crates/huxley-store/migrations/: 001_initial_schema.sql  001_setup.sql  010_app_settings.sql  011_app_roles.sql  012_app_role_perms.sql  013_tags.sql  020_users.sql  030_totp_credentials.sql  031_webauthn_credentials.sql  032_recovery_codes.sql  033_identity_providers.sql  034_federated_identities.sql  035_sessions.sql  036_api_tokens.sql  037_auth_flows.sql  038_verification_tokens.sql  039_login_attempts.sql  050_organizations.sql  051_org_roles.sql  052_org_role_perms.sql  053_org_users.sql  060_projects.sql  060_workflow_projects.sql  061_folders.sql  065_variables.sql  066_credentials.sql  090_audit_log.sql  090_audit_logs.sql
crates/huxley-store/src/: common.rs  error.rs  lib.rs  postgres.rs  redis.rs
crates/huxley-store/src/commands/: api_token.rs  app_perm.rs  app_role.rs  app_role_perm.rs  app_setting.rs  audit_log.rs  auth_flow.rs  credential.rs  federated_identity.rs  folder.rs  identity_provider.rs  login_attempt.rs  mod.rs  org.rs  org_perm.rs  org_role.rs  org_role_perm.rs  org_user.rs  organization.rs  project.rs  recovery_code.rs  session.rs  tag.rs  totp_credential.rs  user.rs  variable.rs  verification_token.rs  webauthn_credential.rs  workflow_project.rs
crates/huxley-store/src/models/: api_token.rs  app_perm.rs  app_role.rs  app_role_perm.rs  app_setting.rs  audit_log.rs  auth_flow.rs  credential.rs  federated_identity.rs  folder.rs  identity_provider.rs  login_attempt.rs  mod.rs  org.rs  org_perm.rs  org_role.rs  org_role_perm.rs  org_user.rs  organization.rs  project.rs  recovery_code.rs  session.rs  tag.rs  totp_credential.rs  user.rs  variable.rs  verification_token.rs  webauthn_credential.rs  workflow_project.rs
crates/huxley-store/src/repos/: api_tokens.rs  app_perms.rs  app_role_perms.rs  app_roles.rs  app_settings.rs  audit_logs.rs  auth_flows.rs  credentials.rs  federated_identities.rs  folders.rs  identity_providers.rs  login_attempts.rs  mod.rs  org_perms.rs  org_role_perms.rs  org_roles.rs  org_users.rs  organizations.rs  orgs.rs  projects.rs  recovery_codes.rs  sessions.rs  tags.rs  totp_credentials.rs  users.rs  variables.rs  verification_tokens.rs  webauthn_credentials.rs  workflow_projects.rs
ui/: package.json  pnpm-lock.yaml  vite.config.ts
