[package]
name = "huxley-api"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
huxley-config = { workspace = true }
huxley-state = { workspace = true }
huxley-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs = { workspace = true }
uuid = { workspace = true }
