[package]
name = "huxley-app"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
huxley-api = { workspace = true }
huxley-config = { workspace = true }
huxley-core = { workspace = true }
huxley-engine = { workspace = true }
huxley-store = { workspace = true }
