[package]
name = "huxley-state"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
deadpool-redis = { workspace = true }
huxley-config = { workspace = true }
huxley-store = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
